syntax = "proto3";

package pb;

option go_package = "github.com/bruce-mig/simple-bank/pb";

import "account.proto";
import "transfer.proto";
import "entry.proto";


message CreateTransferRequest {
    int64  from_account_id = 1;
	int64  to_account_id = 2;
	int64  amount = 3;
	string currency = 4;
}

message CreateTransferResponse {
    Transfer transfer = 1;
	Account  from_account = 2;
	Account  to_account = 3;
	Entry    from_entry = 4;
	Entry    to_entry = 5;
}